Resolved Images not centered

--- a/votechain__next/src/components/HowToVote/HowtoVote.css
+++ b/votechain__next/src/components/HowToVote/HowtoVote.css
@@ -33,6 +33,8 @@
 
 .how-to-vote-card > img {
   width: 50px;
+  display: block;
+  margin: auto;
   margin-bottom: 20px;
 }
 
